Add video translation pipeline with audio extraction, transcription, voice cloning, and final mixing
- Implemented `v5.py` for audio transcription using Whisper and language translation.
- Created `final_subtitles.srt` for subtitle generation.
- Developed `gui_launcher.py` for a user-friendly interface to run the pipeline.
- Introduced `mixer.py` to handle audio-video mixing and subtitle integration.
- Added `readme.md` for usage instructions and execution order.
- Established `requirements.txt` for dependency management.
- Created `run.py` to orchestrate the entire video translation process across multiple environments.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,17 @@
 env388
 env310
 env309
+env309_2
+envf
 testing
 samples
 output
 input
+temp
 extracted_audio
 env
 pretrained_models
 *.wav
+*.mp4
+envf
+start
