--- a/VoiceTranscriber/requirements_transcriber.txt
+++ b/VoiceTranscriber/requirements_transcriber.txt
@@ -1,11 +1,122 @@
-# transformers==4.41.1
-# faster-whisper==1.0.1
-# pyannote.audio==3.1.1
-# librosa==0.10.1
-# pydub==0.25.1
-
-transformers
-faster-whisper
-pyannote.audio
-librosa
-pydub
+alembic==1.16.1
+annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
+anyio==4.9.0
+asteroid-filterbanks==0.4.0
+audioread==3.0.1
+av==14.4.0
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.1.8
+colorama==0.4.6
+coloredlogs==15.0.1
+colorlog==6.9.0
+contourpy==1.3.0
+ctranslate2==4.6.0
+cycler==0.12.1
+decorator==5.2.1
+distro==1.9.0
+docopt==0.6.2
+einops==0.8.1
+exceptiongroup==1.3.0
+faster-whisper==1.1.1
+filelock==3.13.1
+flatbuffers==25.2.10
+fonttools==4.58.2
+fsspec==2024.6.1
+greenlet==3.2.3
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==0.33.0
+humanfriendly==10.0
+HyperPyYAML==1.2.2
+idna==3.10
+importlib-resources==6.5.2
+jinja2==3.1.6
+jiter==0.10.0
+joblib==1.5.1
+julius==0.2.7
+kiwisolver==1.4.7
+lazy-loader==0.4
+librosa==0.11.0
+lightning==2.5.1.post0
+lightning-utilities==0.14.3
+llvmlite==0.43.0
+mako==1.3.10
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.9.4
+mdurl==0.1.2
+mpmath==1.3.0
+msgpack==1.1.0
+networkx==3.2.1
+numba==0.60.0
+numpy==2.0.2
+omegaconf==2.3.0
+onnxruntime==1.19.2
+openai==1.93.1
+optuna==4.3.0
+packaging==25.0
+pandas==2.3.0
+pillow==11.2.1
+platformdirs==4.3.8
+pooch==1.8.2
+primePy==1.3
+protobuf==6.31.1
+pyannote.audio==3.3.2
+pyannote.core==5.0.0
+pyannote.database==5.1.3
+pyannote.metrics==3.2.1
+pyannote.pipeline==3.0.1
+pycparser==2.22
+pydantic==2.11.7
+pydantic-core==2.33.2
+pydub==0.25.1
+pygments==2.19.1
+pyparsing==3.2.3
+pyreadline3==3.5.4
+python-dateutil==2.9.0.post0
+pytorch-lightning==2.5.1.post0
+pytorch-metric-learning==2.8.1
+pytz==2025.2
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.4
+rich==14.0.0
+ruamel.yaml==0.18.14
+ruamel.yaml.clib==0.2.12
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.13.1
+semver==3.0.4
+sentencepiece==0.2.0
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soundfile==0.13.1
+soxr==0.5.0.post1
+speechbrain==1.0.3
+sqlalchemy==2.0.41
+sympy==1.14.0
+tabulate==0.9.0
+tensorboardx==2.6.4
+threadpoolctl==3.6.0
+tokenizers==0.21.1
+tomli==2.2.1
+torch==2.7.1+cu126
+torch-audiomentations==0.12.0
+torch-pitch-shift==1.2.5
+torchaudio==2.7.1+cu126
+torchmetrics==1.7.2
+tqdm==4.67.1
+transformers==4.52.4
+typer==0.16.0
+typing-extensions==4.12.2
+typing-inspection==0.4.1
+tzdata==2025.2
+urllib3==2.4.0
+zipp==3.23.0
+# Note: This file is auto-generated. Do not edit manually.
